--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "firebase": "^10.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-simple-captcha": "^9.3.1",
+    "react-tabs": "^6.0.2",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
