--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.11.0",
     "swiper": "^11.1.3"
   },
